--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		</header>
 		<main>
 			<section>
-				<div class="div-container">
+				<div class="flex-container first">
 					<div class="img-div">
 						<img
 							class="img"
@@ -62,7 +62,7 @@
 							alt="Egg Image"
 						/>
 					</div>
-					<div class="div-container1">
+					<div class="text-div">
 						<div class="text-container">
 							<h2>Transform your brand</h2>
 							<p class="para">
@@ -77,28 +77,84 @@
 							</div>
 						</div>
 					</div>
+				</div>
+				<div class="flex-container second">
+					<div class="img-div">
+						<img
+							class="img"
+							src="/images/desktop/image-stand-out.jpg"
+							alt="Stand Out Image"
+						/>
+					</div>
+					<div class="text-div">
+						<div class="text-container">
+							<h2>Stand out to the right audience</h2>
+							<p class="para">
+								Using a collaborative formula of designers,
+								researchers, photographers, videographers, and
+								copywriters, we’ll build and extend your brand
+								in digital places.
+							</p>
+							<div class="learn-more-link">
+								<a class="learn-more" href="#">Learn more</a>
+								<div class="border pink"></div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- <section>
+				<div class="main-container">
 					<div class="div-container">
 						<div class="img-div">
 							<img
 								class="img"
-								src="/images/desktop/image-stand-out.jpg"
-								alt="Stand Out Image"
+								src="/images/desktop/image-transform.jpg"
+								alt="Egg Image"
 							/>
 						</div>
 						<div class="div-container1">
 							<div class="text-container">
-								<h2>Stand out to the right audience</h2>
+								<h2>Transform your brand</h2>
 								<p class="para">
-									Using a collaborative formula of designers,
-									researchers, photographers, videographers,
-									and copywriters, we’ll build and extend your
-									brand in digital places.
+									We are a full-service creative agency
+									specializing in helping brands grow fast.
+									Engage your clients through compelling
+									visuals that do most of the marketing for
+									you.
 								</p>
 								<div class="learn-more-link">
 									<a class="learn-more" href="#"
 										>Learn more</a
 									>
-									<div class="border pink"></div>
+									<div class="border yellow"></div>
+								</div>
+							</div>
+						</div>
+						<div class="div-container">
+							<div class="img-div">
+								<img
+									class="img"
+									src="/images/desktop/image-stand-out.jpg"
+									alt="Stand Out Image"
+								/>
+							</div>
+							<div class="div-container1">
+								<div class="text-container">
+									<h2>Stand out to the right audience</h2>
+									<p class="para">
+										Using a collaborative formula of
+										designers, researchers, photographers,
+										videographers, and copywriters, we’ll
+										build and extend your brand in digital
+										places.
+									</p>
+									<div class="learn-more-link">
+										<a class="learn-more" href="#"
+											>Learn more</a
+										>
+										<div class="border pink"></div>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -124,25 +180,160 @@
 						</p>
 					</div>
 				</div>
+			</section> -->
+			<section class="client-section">
+				<div class="client-testimonials">
+					<h3 class="client-heading">Client testimonials</h3>
+					<div class="client-container">
+						<div class="client">
+							<img
+								class="clients-img"
+								src="/images/image-emily.jpg"
+								alt="Emily"
+							/>
+							<p class="testimonial">
+								We put our trust in Sunnyside and they
+								delivered, making sure our needs were met and
+								deadlines were always hit.
+							</p>
+							<p class="client-name">Emily R.</p>
+							<p class="client-occupation">Marketing Director</p>
+						</div>
+						<div class="client">
+							<img
+								class="clients-img"
+								src="/images/image-thomas.jpg"
+								alt="Thomas"
+							/>
+							<p class="testimonial">
+								Sunnyside’s enthusiasm coupled with their keen
+								interest in our brand’s success made it a
+								satisfying and enjoyable experience.
+							</p>
+							<p class="client-name">Thomas S.</p>
+							<p class="client-occupation">
+								Chief Operating Officer
+							</p>
+						</div>
+						<div class="client">
+							<img
+								class="clients-img"
+								src="/images/image-jennie.jpg"
+								alt="Jennie"
+							/>
+							<p class="testimonial">
+								Incredible end result! Our sales increased over
+								400% when we worked with Sunnyside. Highly
+								recommended!
+							</p>
+							<p class="client-name">Jennie F.</p>
+							<p class="client-occupation">Business Owner</p>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section>
+				<div class="gallery-container">
+					<div class="gallery">
+						<div class="gallery-img-div">
+							<img
+								class="gallery-img"
+								src="/images/desktop/image-gallery-milkbottles.jpg"
+								alt="Milk Bottles"
+							/>
+						</div>
+						<div class="gallery-img-div">
+							<img
+								class="gallery-img"
+								src="/images/desktop/image-gallery-orange.jpg"
+								alt="Orange"
+							/>
+						</div>
+					</div>
+					<div class="gallery">
+						<div class="gallery-img-div">
+							<img
+								class="gallery-img"
+								src="/images/desktop/image-gallery-cone.jpg"
+								alt="Cone"
+							/>
+						</div>
+						<div class="gallery-img-div">
+							<img
+								class="gallery-img"
+								src="/images/desktop/image-gallery-sugarcubes.jpg"
+								alt="Sugarcubes"
+							/>
+						</div>
+					</div>
+				</div>
 			</section>
 		</main>
+		<footer>
+			<p class="footer-logo">sunnyside</p>
+			<nav class="footer-nav">
+				<ul class="footer-nav-menu">
+					<li class="footer-nav-list">
+						<a class="footer-nav-link" href="#">About</a>
+					</li>
+					<li class="footer-nav-list">
+						<a class="footer-nav-link" href="#">Services</a>
+					</li>
+					<li class="footer-nav-list">
+						<a class="footer-nav-link" href="#">Projects</a>
+					</li>
+				</ul>
+			</nav>
+			<nav class="social-nav">
+				<ul class="social-nav-menu">
+					<li class="social-nav-list">
+						<a class="social-nav-link" href="#">
+							<img
+								class="social-img"
+								src="images/icon-facebook.svg"
+								alt="facebook"
+							/>
+						</a>
+					</li>
+					<li class="social-nav-list">
+						<a class="social-nav-link" href="#">
+							<img
+								class="social-img"
+								src="images/icon-twitter.svg"
+								alt="twitter"
+							/>
+						</a>
+					</li>
+					<li class="social-nav-list">
+						<a class="social-nav-link" href="#">
+							<img
+								class="social-img"
+								src="images/icon-pinterest.svg"
+								alt="Pinterest"
+							/>
+						</a>
+					</li>
+					<li class="social-nav-list">
+						<a class="social-nav-link" href="#">
+							<img
+								class="social-img"
+								src="images/icon-instagram.svg"
+								alt="Instagram"
+							/>
+						</a>
+					</li>
+				</ul>
+			</nav>
 
-		Client testimonials We put our trust in Sunnyside and they delivered,
-		making sure our needs were met and deadlines were always hit. Emily R.
-		Marketing Director Sunnyside’s enthusiasm coupled with their keen
-		interest in our brand’s success made it a satisfying and enjoyable
-		experience. Thomas S. Chief Operating Officer Incredible end result! Our
-		sales increased over 400% when we worked with Sunnyside. Highly
-		recommended! Jennie F. Business Owner About Services Projects Contact
-
-		<div class="attribution">
-			Challenge by
-			<a
-				href="https://www.frontendmentor.io?ref=challenge"
-				target="_blank"
-				>Frontend Mentor</a
-			>. Coded by <a href="#">Your Name Here</a>.
-		</div>
+			<div class="attribution">
+				Challenge by
+				<a
+					href="https://www.frontendmentor.io?ref=challenge"
+					target="_blank"
+					>Frontend Mentor</a
+				>. Coded by <a href="#">Rehan Hodekar</a>.
+			</div>
+		</footer>
 
 		<script src="/script.js"></script>
 	</body>
