--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 			href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" type="text/css" href="/style.css" />
+		<link rel="stylesheet" type="text/css" href="style.css" />
 
 		<title>Sunnyside agency landing page</title>
 	</head>
 	<body>
 		<header class="header">
 			<nav class="navbar">
-				<img class="logo" src="/images/logo.svg" alt="Logo" />
+				<img class="logo" src="images/logo.svg" alt="Logo" />
 
 				<img
 					class="hamburger"
-					src="/images/icon-hamburger.svg"
+					src="images/icon-hamburger.svg"
 					alt="Hamburger Icon"
 				/>
 
@@ -52,7 +52,7 @@
 				<h1>We are creatives</h1>
 				<img
 					class="arrow"
-					src="/images/icon-arrow-down.svg"
+					src="images/icon-arrow-down.svg"
 					alt="Down Arrow"
 				/>
 			</div>
@@ -78,7 +78,7 @@
 					<div class="img-div">
 						<img
 							class="img"
-							src="/images/desktop/image-transform.jpg"
+							src="images/desktop/image-transform.jpg"
 							alt="Egg Image"
 						/>
 					</div>
@@ -87,7 +87,7 @@
 					<div class="img-div">
 						<img
 							class="img"
-							src="/images/desktop/image-stand-out.jpg"
+							src="images/desktop/image-stand-out.jpg"
 							alt="Stand Out Image"
 						/>
 					</div>
@@ -138,7 +138,7 @@
 						<div class="client">
 							<img
 								class="clients-img"
-								src="/images/image-emily.jpg"
+								src="images/image-emily.jpg"
 								alt="Emily"
 							/>
 							<p class="testimonial">
@@ -152,7 +152,7 @@
 						<div class="client thomas">
 							<img
 								class="clients-img"
-								src="/images/image-thomas.jpg"
+								src="images/image-thomas.jpg"
 								alt="Thomas"
 							/>
 							<p class="testimonial">
@@ -168,7 +168,7 @@
 						<div class="client jennie">
 							<img
 								class="clients-img"
-								src="/images/image-jennie.jpg"
+								src="images/image-jennie.jpg"
 								alt="Jennie"
 							/>
 							<p class="testimonial">
@@ -188,14 +188,14 @@
 						<div class="gallery-img-div">
 							<img
 								class="gallery-img"
-								src="/images/desktop/image-gallery-milkbottles.jpg"
+								src="images/desktop/image-gallery-milkbottles.jpg"
 								alt="Milk Bottles"
 							/>
 						</div>
 						<div class="gallery-img-div">
 							<img
 								class="gallery-img"
-								src="/images/desktop/image-gallery-orange.jpg"
+								src="images/desktop/image-gallery-orange.jpg"
 								alt="Orange"
 							/>
 						</div>
@@ -204,14 +204,14 @@
 						<div class="gallery-img-div">
 							<img
 								class="gallery-img"
-								src="/images/desktop/image-gallery-cone.jpg"
+								src="images/desktop/image-gallery-cone.jpg"
 								alt="Cone"
 							/>
 						</div>
 						<div class="gallery-img-div">
 							<img
 								class="gallery-img"
-								src="/images/desktop/image-gallery-sugarcubes.jpg"
+								src="images/desktop/image-gallery-sugarcubes.jpg"
 								alt="Sugarcubes"
 							/>
 						</div>
@@ -287,6 +287,6 @@
 			</div>
 		</footer>
 
-		<script src="/script.js"></script>
+		<script src="script.js"></script>
 	</body>
 </html>
